--- a/sdlBase/sdlBase.vcxproj
+++ b/sdlBase/sdlBase.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="RobotoMono-Thin.ttf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
