--- a/sdlBase/sdlBase.vcxproj.filters
+++ b/sdlBase/sdlBase.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="TextBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fontAtlas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fontAtlas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
